--- a/app/views/widgets/site_navigations/main_nav.html.slim
+++ b/app/views/widgets/site_navigations/main_nav.html.slim
@@ -96,6 +96,8 @@ doctype html
                 .image
                   = image_tag "homepage/lookbook/3.jpg"
 
+    #content-container
+      img src="http://www.fameandpartners.com/assets/home-page-tiles/hero-1-full.jpg"
 coffee:
   $(document).ready ->
 
