--- a/app/assets/stylesheets/widgets/site_navigations.css.scss
+++ b/app/assets/stylesheets/widgets/site_navigations.css.scss
@@ -111,6 +111,14 @@
 
 }
 
+#content-container{
+  img{
+    width: 100%;
+    position: absolute;
+    top: 130px;
+  }
+}
+
 #home-menu{
     .new-this-week a:hover{
       color:white;
