fix tricky bugs on blog

--- a/app/assets/stylesheets/widgets/site_navigations.css.scss
+++ b/app/assets/stylesheets/widgets/site_navigations.css.scss
@@ -53,6 +53,9 @@
 
 /* [Header]
 -------------------------------------------------------*/
+body{
+  background-color: transparent;
+}
 #top {
   font-family: "brandon-grotesque", sans-serif;
   $logo-width: 325px;
