restyled DRESSES menu, removed link from DRESSES a tag

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -59,7 +59,9 @@
 
 // Layout
 @import 'redesign/layout/header';
+@import 'redesign/layout/nav-menu';
 @import 'redesign/layout/menu-new-this-week';
+@import 'redesign/layout/menu-dresses';
 
 // Components
 @import 'redesign/components/tabs';
