--- a/app/views/layouts/redesign/_color.html.slim
+++ b/app/views/layouts/redesign/_color.html.slim
@@ -1,6 +1,6 @@
-li.mega-menu-list--item= link_to 'Black'        , colour_path('Black')
-li.mega-menu-list--item= link_to 'White / Ivory', colour_path('White')
-li.mega-menu-list--item= link_to 'Blue'         , colour_path('Blue')
-li.mega-menu-list--item= link_to 'Pink'         , colour_path('Pink')
-li.mega-menu-list--item= link_to 'Red'          , colour_path('Red')
-li.mega-menu-list--item= link_to 'Pastel'       , colour_path('Pastel')
+li = link_to 'Black'        , colour_path('Black')
+li = link_to 'White / Ivory', colour_path('White')
+li = link_to 'Blue'         , colour_path('Blue')
+li = link_to 'Pink'         , colour_path('Pink')
+li = link_to 'Red'          , colour_path('Red')
+li = link_to 'Pastel'       , colour_path('Pastel')
