--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -51,8 +51,7 @@ ruby:
 .row#home-menu.hidden-xs.hidden-sm.text-center
   span.new-this-week
     em New this week
-  span.dresses
-    = link_to 'DRESSES', dresses_path
+  span.dresses DRESSES
   span.nested
     ' SHOP BY EVENT
     ul
@@ -73,39 +72,33 @@ ruby:
       = form_tag search_path, method: :get, id: 'searchForm'
         input type="text" id="searchValue" placeholder="SEARCH FOR..." name="q"
 
-.row.rect#rect-new-this-week.menu-new-this-week
+.row.rect#rect-new-this-week.nav-menu-wrap.menu-new-this-week
   .slider-wrap
     = react_component('NewThisWeekProducts',{device: 'desktop'})
   .btn-wrap
     = link_to 'SHOP ALL NEW THIS WEEK', dresses_path(:order => 'newest'), class: "btn btn-black btn-md"
 
-.row.rect#rect-dresses
-  .left-area
-    .col1
-      div.head SHOP BY
-      div
-        = link_to 'View all dresses', dresses_path , class: 'no-style-text'
-      div
-        = link_to "What's new", dresses_path(:order => 'newest'), class: 'no-style-text'
-      - unless Features.active?(:getitquick_unavailable)
-        div
-          = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'no-style-text'
-    .col2
-      div.head STYLE
-      = render partial: 'layouts/redesign/style'
-    .col3
-      div.head COLOUR
-      = render partial: 'layouts/redesign/color'
-    /.col4
-      /div.head SEPARATES
-      /div Outerwear
-  = link_to mystyle_landing_page_path(:lpi => 'none', :pids => ['640-forrest-green','643-black','648-black','656-black','649-black','640-black'],:limit => 0), class: 'right-area'
-    div.girl-image
+.row.rect#rect-dresses.nav-menu-wrap.menu-dresses
+  ul
+    li.title shop by
+    li
+      = link_to 'View all dresses', dresses_path
+    li
+      = link_to "What's new", dresses_path(:order => 'newest')
+    - unless Features.active?(:getitquick_unavailable)
+      li
+        = link_to 'Made in 48 hours', fast_making_dresses_path
+  ul
+    li.title style
+    = render partial: 'layouts/redesign/style'
+  ul
+    li.title colour
+    = render partial: 'layouts/redesign/color'
+
+  = link_to mystyle_landing_page_path(:lpi => 'none', :pids => ['640-forrest-green','643-black','648-black','656-black','649-black','640-black'],:limit => 0), class: 'highlight-wrap'
+    .media-wrap
       = image_tag "homepage/dress-girl.jpg"
-    div.girl-text
-      .contain
-        div BAMBI X FAME.
-        div SHOP BAMBI'S PICKS
+    .copy-wrap BAMBI X FAME.<br>SHOP BAMBI'S PICKS
 
 .row.rect#rect-lookbook
   .lookbook-container
