[feat] add discount price to cart
I add discount price display to cart

--- a/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
@@ -44,6 +44,8 @@ ruby:
               span.color
                 ' #{ product.color.presentation}
             .pull-right.text-muted = product.price.display_price
+            - if product.discount.present?
+              .pull-right.text-muted.sale-percentage = "#{product.discount}% off"
           .cart-prices
 
             - if product.making_options.present?
