--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1204,31 +1204,33 @@ ul.secondary.pull-right {
         position: absolute;
         left: 0;
         top: 29px;
-        width: 400px;
-        margin: 0;
-        padding: 30px;
+        min-width: 220px;
+        margin: -1px 0 0;
+        padding: 20px 60px 20px 20px;
         display: none;
         list-style: none;
         text-align: left;
-        margin-top: -1px;
-        border: solid $c-neutral-10 1px;
+        text-transform: none;
+        border: solid $c-neutral-black 1px;
         border-top-color: $c-neutral-4;
-        background-color: #f5f5f5;
+        background: $c-neutral-white;
 
         li {
-          float: left;
-          width: 50%;
-          padding-right: 30px;
+          display: block;
+          margin-bottom: 8px;
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 25px;
 
           a {
-            text-transform: capitalize;
-            font-weight: 400;
-            font-size: 1.6rem;
-            color: #333;
-            background: transparent;
+            display: inline-block;
+            color: $c-neutral-black;
+            border-bottom: solid transparent 1px;
 
-            &:hover {
-              color: #355e6d;
+            &:hover,
+            &:focus {
+              color: $c-neutral-black;
+              border-color: $c-neutral-black;
             }
 
           }
