--- a/app/views/layouts/redesign/_event.html.slim
+++ b/app/views/layouts/redesign/_event.html.slim
@@ -1,11 +1,11 @@
-li.mega-menu-list--item = link_to 'Formal'       , build_taxon_path('Formal')
-li.mega-menu-list--item = link_to 'Wedding'      , build_taxon_path('Wedding')
-li.mega-menu-list--item = link_to 'Birthday'     , build_taxon_path('Birthday')
-li.mega-menu-list--item = link_to 'Special Event', build_taxon_path('Special Event')
-li.mega-menu-list--item = link_to 'Ball Gowns'   , build_taxon_path('Ball Gowns')
-li.mega-menu-list--item = link_to 'Bridesmaid'   , bridesmaid_collection_path
-li.mega-menu-list--item = link_to 'Graduation'   , build_taxon_path('Graduation')
-li.mega-menu-list--item = link_to 'Prom'         , build_taxon_path('Prom')
-li.mega-menu-list--item = link_to 'Homecoming'   , build_taxon_path('Homecoming')
-li.mega-menu-list--item = link_to 'Sweet 16'     , build_taxon_path('Sweet 16')
-li.mega-menu-list--item = link_to 'Debutante'    , build_taxon_path('Debutante')
+li = link_to 'Formal'       , build_taxon_path('Formal')
+li = link_to 'Wedding'      , build_taxon_path('Wedding')
+li = link_to 'Birthday'     , build_taxon_path('Birthday')
+li = link_to 'Special Event', build_taxon_path('Special Event')
+li = link_to 'Ball Gowns'   , build_taxon_path('Ball Gowns')
+li = link_to 'Bridesmaid'   , bridesmaid_collection_path
+li = link_to 'Graduation'   , build_taxon_path('Graduation')
+li = link_to 'Prom'         , build_taxon_path('Prom')
+li = link_to 'Homecoming'   , build_taxon_path('Homecoming')
+li = link_to 'Sweet 16'     , build_taxon_path('Sweet 16')
+li = link_to 'Debutante'    , build_taxon_path('Debutante')
