restyled lookbook nav menu

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -62,6 +62,7 @@
 @import 'redesign/layout/nav-menu';
 @import 'redesign/layout/menu-new-this-week';
 @import 'redesign/layout/menu-dresses';
+@import 'redesign/layout/menu-lookbook';
 
 // Components
 @import 'redesign/components/tabs';
