add privacy policy page to footer (mobile + desktop)

--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -82,6 +82,8 @@
           = link_to 'Fame Chain', fame_chain_path
         li.footer-nav--item
           = link_to 'Contact Us', new_contact_path
+        li.footer-nav--item
+          = link_to 'Privacy Policy', privacy_path
 
   .lower-row
     .col-md-6.col-sm-12.copyright
