--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -283,14 +283,15 @@ ruby:
           li.bottom-area
             = link_to 'New Sizing', size_guide_path, class: 'bottom-area-text'
           li.bottom-area
-            = link_to 'Terms', terms_path, class: 'bottom-area-text'
-          li.bottom-area
             = link_to 'Get styling advice', style_consultation_path, class: 'bottom-area-text'
           li.bottom-area
             = link_to 'Fame Chain', fame_chain_path, class: 'bottom-area-text'
           li.bottom-area
             = link_to 'Contact US', new_contact_path, class: 'bottom-area-text'
-
+          li.bottom-area
+            = link_to 'Terms', terms_path, class: 'bottom-area-text'
+          li.bottom-area
+            = link_to 'Privacy Policy', privacy_path, class: 'bottom-area-text'
 
 = render 'layouts/redesign/campaigns/auto_apply_promo_code'
 
