--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -63,6 +63,7 @@
 @import 'redesign/layout/menu-new-this-week';
 @import 'redesign/layout/menu-dresses';
 @import 'redesign/layout/menu-lookbook';
+@import 'redesign/layout/menu-magazine';
 
 // Components
 @import 'redesign/components/tabs';
