Deactivate shipping message
Keep the message in place for next time

--- a/app/views/checkout/v1/spree/checkout/_address_form.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_address_form.html.slim
@@ -39,7 +39,7 @@ h2.checkout-section-title 2. Address Details
 
 - if Features.active?(:shipping_message)
   p
-    | Please note there will be no shipping between the 1st-10th October due to international public holidays.
+    | Please note there may be shipping delays.
     br
     | 'We apologise for any inconvenience.
 .row
