SUPER URGENT HAPPY FUN TIME

--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -7,7 +7,7 @@
 .page-title.default.category-header style="background-image: url('#{@collection.details.banner.image}')"
   .container
     .page-title--details
-      h1.no-padding-bottom = @collection.details.banner.title
+      h1.no-padding-bottom = raw @collection.details.banner.title
       p= raw @collection.details.banner.subtitle
 
 .page-content.products-collections.category
