--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -49,8 +49,18 @@
     email_capture_modal += "modal_popup.enableAutoApplyPromoCampaign();" if auto_apply
 
   = content_for :inline_javascript do
-    = raw email_capture_modal
+    - if session[:redeem_via_fb_state] != 'displayed_thanks'
+      = raw email_capture_modal
 
+- if session[:redeem_via_fb_state] == 'signed_in'
+  ruby:
+    session[:redeem_via_fb_state] = 'displayed_thanks'
+  #modal-popup-content-template.hidden
+    input type="hidden" name="content" value=content
+    input type="hidden" name="promocode" value=promocode
+      | Thanks babe. Your discount will be applied to your cart. Have fun x.
+
+- else
   - if template_name == 'blank'
     #modal-popup-content-template.hidden
       input type="hidden" name="content" value=content
@@ -63,16 +73,15 @@
       input type="hidden" name="promocode" value=promocode
       .vex-footer
         .row.row-inline.text-center
-          / .col-sm-5.col-inline.full-form
-          /   - if promocode == 'birthdaybabe'
-          /     = link_to 'Redeem via Facebook', fb_auth_path(show_promocode_modal: encode(promocode)), class: 'btn btn-facebook btn-block btn-md'
-          /   - elsif campaign_uuid == 'auto_apply_promo'
-          /     = link_to 'Redeem via Facebook', fb_auth_path(auto_apply: true), class: 'btn btn-facebook btn-block btn-md'
-          /   - else
-          /     = link_to 'Redeem via Facebook', fb_auth_path, class: 'btn btn-facebook btn-block btn-md'
-          /
-          / .col-sm-2.col-inline.full-form
-          /   .or-rhombus: .rhombus: .rhombus-text-holder: .rhombus-text or
+          .col-sm-5.col-inline.full-form
+            - if promocode == 'birthdaybabe'
+              = link_to 'Redeem via Facebook', fb_auth_path(show_promocode_modal: encode(promocode), redeem_via_fb_state: 'clicked'), class: 'btn btn-facebook btn-block btn-md'
+            - elsif campaign_uuid == 'auto_apply_promo'
+              = link_to 'Redeem via Facebook', fb_auth_path(auto_apply: true, redeem_via_fb_state: 'clicked'), class: 'btn btn-facebook btn-block btn-md'
+            - else
+              = link_to 'Redeem via Facebook', fb_auth_path(redeem_via_fb_state: 'clicked'), class: 'btn btn-facebook btn-block btn-md'
+          .col-sm-2.col-inline.full-form
+            .or-rhombus: .rhombus: .rhombus-text-holder: .rhombus-text or
           .col-sm-8.col-inline
             .input-group
               input.form-control.form-control-md.form-control-transparent name="email" type="text" placeholder="Redeem via e-mail"
