--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -4,11 +4,11 @@
 
 = render :partial => 'javascript'
 
-.page-title.default.category-header style="background-image: url('#{@collection.details.banner.image}')"
+.page-title.default.category-header style="background-image: url('#{page.banner_image}')"
   .container
     .page-title--details
-      h1.no-padding-bottom = raw @collection.details.banner.title
-      p= raw @collection.details.banner.subtitle
+      h1.no-padding-bottom = raw page.heading
+      p= raw page.sub_heading
 
 .page-content.products-collections.category
   = render :partial => 'filters_sort'
