Add deprecation notices to old modal files

--- a/app/views/shared/_marketing_pop_js.html.slim
+++ b/app/views/shared/_marketing_pop_js.html.slim
@@ -1,3 +1,6 @@
+/ Deprecated in favour of `app/views/shared/_email_capture_modal.html.slim`
+/ Still used in a couple of landing pages and statics
+/ TODO - DELETE
 ruby:
   current_time = Time.now
   dmb_time ||= cookies[:dmb_time]
