--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -142,6 +142,8 @@
 
       var colSpan = extraInput ? 1 : 2;
 
+      var helpText = <span>{this.props.help}</span>;
+
       var textInput = <td colSpan={colSpan}>
           <input
               type="text"
@@ -149,6 +151,7 @@
               placeholder={placeholder}
               defaultValue={this.props.defaultValue}
               onChange={this.handleChange} />
+              {helpText}
         </td>;
 
       return (
@@ -199,7 +202,7 @@
       defaultValue: decodedDefaultParam('pc')
     }, {
       label: "template name",param: "tn", required: false, encoded: true,  type: 'string',
-      defaultValue: decodedDefaultParam('tn')
+      defaultValue: decodedDefaultParam('tn'), help: ' "default" for email capture form, "blank" for empty html'
     }, {
       label: "heading",    param: "h",   required: false, encoded: true,  type: 'string',
       defaultValue: decodedDefaultParam('h')
