Manual semicolon insertion

--- a/app/views/shared/_marketing_pop_js.html.slim
+++ b/app/views/shared/_marketing_pop_js.html.slim
@@ -18,7 +18,7 @@ javascript:
   pop_switch = '#{params[:pop_switch]}';
   pop = '#{params[:pop]}';
   pop_title = '#{strip_tags(params[:pop_title])}';
-  opts = {width: '700px', className: '#{class_name}'}
+  opts = {width: '700px', className: '#{class_name}'};
 
   if (typeof content != 'undefined') {
     if (contentparam == 'birthday.gif' || contentparam == 'prom.gif' || contentparam == 'welcomeback.jpg' || contentparam == 'jansale'|| contentparam == 'bride15p' || contentparam == 'feb2015v1' || contentparam == 'feb2015v2' || contentparam == 'feb2015v3' || contentparam == 'bride3plus1' || pop_switch == '1' || pop == 'true') {
