--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -8,6 +8,7 @@
 <style type="text/css">
   #modal_generator input[type=text] {
     width:100%!important;
+    min-width:10rem!important;
   }
   #modal_generator label {
     margin-bottom:1rem!important;
@@ -202,7 +203,7 @@
       defaultValue: decodedDefaultParam('pc')
     }, {
       label: "template name",param: "tn", required: false, encoded: true,  type: 'string',
-      defaultValue: decodedDefaultParam('tn'), help: ' "default" for email capture form, "blank" for empty html'
+      defaultValue: decodedDefaultParam('tn'), help: '"signup" for email and facebook, "default" for email capture form, "blank" for empty html'
     }, {
       label: "heading",    param: "h",   required: false, encoded: true,  type: 'string',
       defaultValue: decodedDefaultParam('h')
