[feat] add rosebud and cheetah to color filter
I add rosebud and cheetag to color filter

--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -159,6 +159,27 @@
 		.Pastel{
 			background-color: #FFB7B7 !important;
 		}
+		.Cheetah{
+			background-image: url("product-collections/Cheetah.png");
+			background-size: 140px 40px;
+			background-position: 0px 0px;
+		}
+		.Cheetah.thumb-true{
+			background-image: url("product-collections/tick.svg"), url("product-collections/Cheetah.png");
+			background-size: 14px 14px, 140px 40px ;
+			background-repeat: no-repeat, no-repeat;
+			background-position: 4px 2px, 0px 0px;
+		}
+		.Rosebud{
+			background-image: url("product-collections/Rosebud.png");
+			background-size: 200px 65px;
+		}
+		.Rosebud.thumb-true{
+			background-image: url("product-collections/tick.svg"), url("product-collections/Rosebud.png");
+			background-size: 14px 14px, 200px 65px ;
+			background-repeat: no-repeat, no-repeat;
+			background-position: 4px 2px, 0px 0px;
+		}
 	}
 
 	.show-more-styles{
