--- a/app/views/pages/mystyle.html.slim
+++ b/app/views/pages/mystyle.html.slim
@@ -3,9 +3,8 @@
 
 = render :partial => '/products/collections/javascript', :locals => { :page_size => 99 }
 
-- unless params[:lpi] == 'none'
-  - image = "//#{configatron.asset_host}/pages#{page.path}/#{params[:lpi] || 'default'}.jpg"
-  .page-title.default.category-header style="background-image: url('#{image}')"
+- if page_presenter.display_banner?
+  .page-title.default.category-header style="background-image: url('#{page_presenter.banner_image}')"
     .container
       .page-title--details
         h1.no-padding-bottom = params[:lpt]
