--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -4,12 +4,12 @@
 
 = render :partial => 'javascript'
 
-- if page_presenter.display_banner?
-  .page-title.default.category-header style="background-image: url('#{page_presenter.banner_image}')"
+- if banner.display?
+  .page-title.default.category-header style="background-image: url('#{banner.image}')"
     .container
       .page-title--details
-        h1.no-padding-bottom = raw page_presenter.heading
-        p= raw page_presenter.sub_heading
+        h1.no-padding-bottom = raw page.heading
+        p= raw page.sub_heading
 
 .page-content.products-collections.category
   = render :partial => 'filters_sort'
