--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -8,8 +8,8 @@
   .page-title.default.category-header style="background-image: url('#{banner.image}')"
     .container
       .page-title--details
-        h1.no-padding-bottom = raw page.heading
-        p= raw page.sub_heading
+        h1.no-padding-bottom = raw params[:lpt] || page.heading
+        p= raw params[:lps] || page.sub_heading
 
 .page-content.products-collections.category
   = render :partial => 'filters_sort'
