--- a/app/views/lookbook/show.html.slim
+++ b/app/views/lookbook/show.html.slim
@@ -4,10 +4,15 @@
 = render :partial => '/products/collections/javascript', :locals => { :page_size => 99 }
 
 .page-content
-  ul.rslides
-    - (1..page.get(:image_count)).each do |n|
-      li
-        = image_tag "//#{configatron.asset_host}#{page.path}/#{n}.jpg", alt: "#{page.heading} #{n}", class: 'img-responsive portrait-img'
+
+  - if banner.display?
+    - if banner.custom?
+      = image_tag "#{banner.image}", alt: "#{page.heading}", class: 'img-responsive portrait-img'
+    - else
+      ul.rslides
+        - (1..page.get(:image_count)).each do |n|
+          li
+            = image_tag "//#{configatron.asset_host}#{page.path}/#{n}.jpg", alt: "#{page.heading} #{n}", class: 'img-responsive portrait-img'
 
   .page-content.products-collections.category
     = render :partial => 'filters_sort', :locals => { :hidden => true }
