Added the shipping message to the site preferences

--- a/app/views/checkout/v1/spree/checkout/_address_form.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_address_form.html.slim
@@ -2,6 +2,7 @@ ruby:
   address_id = address_type.chars.first
   first_name = form.object.firstname.present? ? form.object.firstname : (@order.try(:first_name) || @user.try(:first_name))
   last_name = form.object.lastname.present? ? form.object.lastname : (@order.try(:last_name) || @user.try(:last_name))
+  shopping_bag_texts = Preferences::ShoppingBag.new(current_site_version)
 
 - if Spree::Config[:address_requires_state]
   ruby:
@@ -39,9 +40,9 @@ h2.checkout-section-title 2. Address Details
 
 - if Features.active?(:shipping_message)
   p
-    | Please note there may be shipping delays.
+    = "#{shopping_bag_texts.shipping_message}"
     br
-    | 'We apologise for any inconvenience.
+    | We apologise for any inconvenience.
 .row
   .col-md-6.form-group
     = form.label :firstname, with_required_mark(t(:first_name))
