Added a rspec file

--- a/app/views/checkout/v1/spree/checkout/_address_form.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_address_form.html.slim
@@ -40,7 +40,7 @@ h2.checkout-section-title 2. Address Details
 
 - if Features.active?(:shipping_message)
   p
-    = "#{shopping_bag_texts.shipping_message}"
+    = shopping_bag_texts.shipping_message
     br
     | We apologise for any inconvenience.
 .row
