add shipping message to order summary

--- a/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
@@ -5,7 +5,8 @@ ruby:
     window.app.shopping_cart_summary = new ShoppingCartSummary({
       cart: window.app.shopping_cart,
       container: '.checkout-items',
-      value_proposition: \"#{shopping_bag_texts.value_proposition}\"
+      value_proposition: \"#{shopping_bag_texts.value_proposition}\",
+      shipping_message: \"#{shopping_bag_texts.shipping_message}\"
     });
   "
   preload_cart_data = "
@@ -87,6 +88,9 @@ ruby:
     = @order.try(:number)
 
   .shopping-bag-text-wrapper
+    .row.shopping-bag-text
+      = raw shopping_bag_texts.shipping_message
+
     .row.shopping-bag-text
       = raw shopping_bag_texts.value_proposition
 
