relocated events links to dresses menu

--- a/app/assets/stylesheets/redesign/layout/_menu-dresses.scss
+++ b/app/assets/stylesheets/redesign/layout/_menu-dresses.scss
@@ -52,4 +52,20 @@
 
   }
 
+  @media (max-width: 1400px) {
+
+    & {
+
+      ul {
+        margin-right: 40px;
+      }
+
+      .highlight-wrap {
+        width: 300px;
+      }
+
+    }
+
+  }
+
 }
