--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -53,10 +53,11 @@ ruby:
     em New this week
   span.dresses
     = link_to 'DRESSES', dresses_path
-  span.nested
-    ' SHOP BY EVENT
-    ul
-      = render partial: 'layouts/redesign/event'
+  /!
+    span.nested
+      ' SHOP BY EVENT
+      ul
+        = render partial: 'layouts/redesign/event'
 
   span.lookbook LOOKBOOK
   /! span.magazine MAGAZINE
@@ -96,6 +97,9 @@ ruby:
   ul
     li.title colour
     = render partial: 'layouts/redesign/color'
+  ul
+    li.title events
+    = render partial: 'layouts/redesign/event'
 
   = link_to mystyle_landing_page_path(:lpi => 'none', :pids => ['640-forrest-green','643-black','648-black','656-black','649-black','640-black'],:limit => 0), class: 'highlight-wrap'
     .media-wrap
