Added the masterpass into the cards icon, Fixed the spelling on the masterpasss confirmation page.

--- a/app/views/checkout/v1/spree/checkout/_masterpass_step.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_masterpass_step.html.slim
@@ -27,7 +27,7 @@
     - content_for :inline_javascript do
       | Pin.setPublishableKey('#{@credit_card_gateway.options[:publishable_key]}');
 
-  h2.checkout-section-title Payment Details from Masterpass
+  h2.checkout-section-title Payment Details from MasterPass
   / TODO - Rewrite as react component with new button layout and behaviour
   p All transactions are secure and encrypted. Credit card information is never stored.
   #payment-selection.panel-group aria-multiselectable="false" role="tablist"
