[feat] create new modal
I create new modal

--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -86,6 +86,20 @@
               span.input-group-addon
                 input.btn-plain.btn-reset type="submit" value="Send"
 
+  - elsif template_name == 'new-modal'
+    #modal-popup-content-template
+      input type="hidden" name="content" value=content
+      input type="hidden" name="promocode" value=promocode
+      .vex-footer
+        .row.row-inline.text-center
+          .col-sm-12.col-inline.email-form
+            .input-group
+              input.form-control.form-control-md.form-control-transparent name="email" type="text" placeholder="EMAIL"
+              span.input-group-addon
+                input.btn-plain.btn-reset type="submit" value="SUBMIT"
+          .col-sm-12.col-inline.full-form.fb-form
+            = link_to 'Redeem via Facebook', fb_auth_path(auto_apply: true, redeem_via_fb_state: 'clicked'), class: 'btn btn-facebook btn-block btn-md'
+
   - else # default, support legacy
     #modal-popup-content-template.hidden
       .vex-footer.vex-footer-email
